--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,20 +9,15 @@ on:
       - master
 
 jobs:
-  security:
+  lab3:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
-
+        uses: actions/checkout@v4
+      
       - name: Set up Python
         uses: actions/setup-python@v4
-        with:
-          python-version: 3.10  # Убедитесь, что указана актуальная версия
 
-      - name: Install Bandit
-        run: pip install bandit
-
-      - name: Run Bandit
-        run: bandit -r . --exclude static/
+      - name: Check security with Bandit
+        run: |
+          bandit -r .
